--- a/stylingLightMode.css
+++ b/stylingLightMode.css
@@ -41,7 +41,6 @@ label{
     width: 100%;
     position:fixed;
     top:0;
-
     opacity: 0.9;
 }
 
@@ -96,7 +95,7 @@ label{
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    height:10vh;
+    height:5vh;
     border-radius: 10px;
     gap:0px;
 }
@@ -148,7 +147,7 @@ label{
     align-items: center;
     font-size: 15px;
     text-align: center;
-    padding:20px;
+    padding:10px;
     gap:20px;
 }
 
@@ -159,7 +158,7 @@ label{
     display: flex;
     border-radius: 10px;
     align-items: center;
-    padding:20px;
+    padding:10px;
     box-sizing: border-box;
     line-height:1.5;
     font-size: 1.5vw;
@@ -182,7 +181,7 @@ label{
     align-items: center;
     font-size: 1.5vw;
     text-align: center;
-    padding:20px;
+    padding:10px;
     gap:20px;
 }
 
@@ -194,7 +193,7 @@ label{
     text-align: center;
     display: flex;
     border-radius: 10px;
-    padding:20px;
+    padding:10px;
     line-height:1.5;
     box-sizing: border-box;
 }
@@ -220,7 +219,6 @@ label{
     line-height:1.5;
     box-sizing: border-box;
 }
-
 
 .contact{
     display: flex;
@@ -320,7 +318,7 @@ a:hover{
 
 
 
-@media(max-width:650px){
+@media(max-width:750px){
     .nav_container{
         display:flex;
         position:fixed;
@@ -341,4 +339,40 @@ a:hover{
         justify-content:center;
 
     }
+
+}
+
+@media(max-width:950px){
+    .project{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        width:auto;
+        height:75vh;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5vw;
+        text-align: center;
+        padding:10px;
+        gap:20px;
+    }
+    
+    .aboutMe{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        width:auto;
+        height:75vh;
+        justify-content: center;
+        align-items: center;
+        font-size: 15px;
+        text-align: center;
+        padding:10px;
+        gap:20px;
+    }
+    #aboutMeLanguages{
+        grid-row: span 1;
+        
+    }
+
 }
