--- a/stylingDarkMode.css
+++ b/stylingDarkMode.css
@@ -2,6 +2,7 @@
     font-family:monospace;
     background-color:#1B1B1C;
     color: white;
+    transition: background-color 0.5s ease, color 0.5s ease;
     /* border: 1px solid black; */
 } 
 
@@ -16,6 +17,11 @@ a{
     cursor:pointer;
     background-color:#1B1B1C;
     color: white;
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.customA{
+    font-size:30px;
 }
 
 iframe {
@@ -97,6 +103,7 @@ label{
     font-size: 30px;
     height:5vh;
     border-radius: 10px;
+    box-sizing: border-box;
     gap:0px;
 }
 
@@ -207,6 +214,7 @@ label{
     font-size: 1.5vw;
     padding:10px;
     gap:20px;
+    margin-bottom:20px;
 }
 
 .educationContent{
@@ -222,19 +230,20 @@ label{
 
 .contact{
     display: flex;
-    width:auto;
+    width:100%;
     height:75vh;
     align-items: center;
     line-height: 0.7;
     font-size: 15px;
+    flex-shrink:1;
     text-align: flex-start;
     flex-direction : column;
+    gap:20px;
 }
 
 .contact-content{
     display:flex;
     flex-direction:column;
-    flex-shrink:1;
     width:80%;
     height:100%;    
     border: 1px solid #FF8000;
@@ -374,5 +383,11 @@ a:hover{
         grid-row: span 1;
         
     }
+    
+}
 
+@media(min-width:950px){
+    .education{
+        font-size:14px;
+    }
 }
