--- a/stylingLightMode.css
+++ b/stylingLightMode.css
@@ -2,12 +2,14 @@
     font-family:monospace;
     background-color:white;
     color: black;
-    /* border: 1px solid black; */
+    transition: background-color 0.5s ease, color 0.5s ease;
+    border: 1px solid black;
 } 
 
 
 body{
     margin:0px;
+    
 }
 
 a{  
@@ -16,7 +18,14 @@ a{
     cursor:pointer;
     background-color:white;
     color: black;
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
+
+.customA{
+    font-size:30px;
+
+}
+
 
 iframe {
     height: 100px;
@@ -32,6 +41,7 @@ label{
 .margin{
     margin:80px;
     height:100%;
+    margin-bottom: 10px;
 }
 
 .nav_container{
@@ -97,6 +107,7 @@ label{
     font-size: 30px;
     height:5vh;
     border-radius: 10px;
+    box-sizing: border-box;
     gap:0px;
 }
 
@@ -106,7 +117,6 @@ label{
     color: #FFFFFF;
     border-radius:10px;
     padding:5px;
-
 }
 
 #contactButton:hover{
@@ -207,6 +217,7 @@ label{
     font-size: 1.5vw;
     padding:10px;
     gap:20px;
+    margin-bottom:20px;
 }
 
 .educationContent{
@@ -222,19 +233,20 @@ label{
 
 .contact{
     display: flex;
-    width:auto;
+    width:100%;
     height:75vh;
     align-items: center;
     line-height: 0.7;
     font-size: 15px;
+    flex-shrink:1;
     text-align: flex-start;
     flex-direction : column;
+    gap:20px;
 }
 
 .contact-content{
     display:flex;
     flex-direction:column;
-    flex-shrink:1;
     width:80%;
     height:100%;    
     border: 1px solid #FF8000;
@@ -374,5 +386,11 @@ a:hover{
         grid-row: span 1;
         
     }
+    
+}
 
+@media(min-width:950px){
+    .education{
+        font-size:14px;
+    }
 }
