--- a/stylingLightMode.css
+++ b/stylingLightMode.css
@@ -3,7 +3,7 @@
     background-color:white;
     color: black;
     transition: background-color 0.5s ease, color 0.5s ease;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 } 
 
 
@@ -23,7 +23,6 @@ a{
 
 .customA{
     font-size:30px;
-
 }
 
 
