--- a/stylingDarkMode.css
+++ b/stylingDarkMode.css
@@ -4,11 +4,12 @@
     color: white;
     transition: background-color 0.5s ease, color 0.5s ease;
     /* border: 1px solid black; */
+    box-sizing: border-box;
 } 
 
-
-body{
-    margin:0px;
+body, html {
+    margin: 0;
+    padding: 0;
 }
 
 a{  
@@ -20,11 +21,16 @@ a{
     transition: background-color 0.5s ease, color 0.5s ease;
 }
 
-.customA{
+.customA_h1{
     font-size:30px;
 }
 
-iframe {
+#customA_text{
+    font-size:1.6vw;
+}
+
+
+.youtubeIframe {
     height: 100px;
     width: 200px;
     
@@ -36,8 +42,9 @@ label{
 }
 
 .margin{
-    margin:80px;
+    padding:80px;
     height:100%;
+    margin-bottom: 10px;
 }
 
 .nav_container{
@@ -97,7 +104,7 @@ label{
 
 .titles{
     display:flex;
-    width:auto;
+    width:100%;
     justify-content: center;
     align-items: center;
     font-size: 30px;
@@ -113,7 +120,6 @@ label{
     color: #FFFFFF;
     border-radius:10px;
     padding:5px;
-
 }
 
 #contactButton:hover{
@@ -133,13 +139,13 @@ label{
 .h1{
     display: flex;
     width:auto;
-    height:75vh;
+    height:80vh;
     justify-content: center;
     align-items: center;
     font-size: 15px;
     text-align: center;
     padding:20px;
-    gap:20px;
+    
 }
 
 
@@ -149,10 +155,10 @@ label{
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr 1fr;
     width:auto;
-    height:75vh;
+    height:auto;
     justify-content: center;
     align-items: center;
-    font-size: 15px;
+    font-size: 1.6vw;
     text-align: center;
     padding:10px;
     gap:20px;
@@ -165,11 +171,17 @@ label{
     display: flex;
     border-radius: 10px;
     align-items: center;
+    justify-content: center;
     padding:10px;
     box-sizing: border-box;
     line-height:1.5;
-    font-size: 1.5vw;
+    
 
+}
+
+#CVImage{
+    width:50px;
+    height:80px;
 }
 
 #aboutMeLanguages{
@@ -177,16 +189,49 @@ label{
     
 }
 
+#aboutStart{
+    scroll-margin-top: 100px;
+}
+
+.PDFPage{
+    display:none;
+    border:20px;
+    position:fixed;
+    justify-content: center;
+    align-items:center;
+    width:100%;
+    height:100%;
+    z-index: 1;
+    background-color: black;
+    opacity:0.9;
+    margin:auto;
+}
+
+#CV_PDF{
+    height:80%;
+    width:80%;
+}
+
+#exitCV{
+    display:block;
+    position:fixed;
+    top:10px;
+    right:10px;
+}
+
+#exitCV:hover{
+    cursor:pointer;
+}
 
 .project{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
     width:auto;
-    height:75vh;
+    height:auto;
     justify-content: center;
     align-items: center;
-    font-size: 1.5vw;
+    font-size: 1.6vw;
     text-align: center;
     padding:10px;
     gap:20px;
@@ -205,13 +250,17 @@ label{
     box-sizing: border-box;
 }
 
+#projectStart{
+    scroll-margin-top: 100px;
+}
+
 .education{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     width:auto;
-    height:75vh;
-    font-size: 1.5vw;
+    height:auto;
+    font-size: 1.6vw;
     padding:10px;
     gap:20px;
     margin-bottom:20px;
@@ -228,10 +277,14 @@ label{
     box-sizing: border-box;
 }
 
+#educationStart{
+    scroll-margin-top: 100px;
+}
+
 .contact{
     display: flex;
-    width:100%;
-    height:75vh;
+    width:auto;
+    height:auto;
     align-items: center;
     line-height: 0.7;
     font-size: 15px;
@@ -250,6 +303,10 @@ label{
     border-radius:10px;
     
     
+}
+
+#contactStart{
+    scroll-margin-top: 100px;
 }
 
 
@@ -323,8 +380,8 @@ a:hover{
 .h2{
     display:flex;
     justify-content:center;
+    font-size:15px;
 }
-
 
 
 @media(max-width:750px){
@@ -353,32 +410,15 @@ a:hover{
 
 @media(max-width:950px){
     .project{
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
-        width:auto;
-        height:75vh;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.5vw;
-        text-align: center;
-        padding:10px;
-        gap:20px;
     }
     
     .aboutMe{
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr;
-        width:auto;
-        height:75vh;
-        justify-content: center;
-        align-items: center;
-        font-size: 15px;
-        text-align: center;
-        padding:10px;
-        gap:20px;
     }
+    
     #aboutMeLanguages{
         grid-row: span 1;
         
@@ -386,8 +426,8 @@ a:hover{
     
 }
 
-@media(min-width:950px){
+@media(min-width:949px){
     .education{
-        font-size:14px;
+        font-size:16px;
     }
 }
