--- a/stylingLightMode.css
+++ b/stylingLightMode.css
@@ -4,12 +4,12 @@
     color: black;
     transition: background-color 0.5s ease, color 0.5s ease;
     /* border: 1px solid black; */
+    box-sizing: border-box;
 } 
 
-
-body{
-    margin:0px;
-    
+body, html {
+    margin: 0;
+    padding: 0;
 }
 
 a{  
@@ -21,12 +21,17 @@ a{
     transition: background-color 0.5s ease, color 0.5s ease;
 }
 
-.customA{
+.customA_h1{
     font-size:30px;
 }
 
+#customA_text{
+    font-size:1.6vw;
+    text-decoration: underline;
+}
 
-iframe {
+
+.youtubeIframe {
     height: 100px;
     width: 200px;
     
@@ -38,7 +43,7 @@ label{
 }
 
 .margin{
-    margin:80px;
+    padding:80px;
     height:100%;
     margin-bottom: 10px;
 }
@@ -100,13 +105,12 @@ label{
 
 .titles{
     display:flex;
-    width:auto;
+    width:100%;
     justify-content: center;
     align-items: center;
     font-size: 30px;
     height:5vh;
     border-radius: 10px;
-    box-sizing: border-box;
     gap:0px;
 }
 
@@ -135,13 +139,13 @@ label{
 .h1{
     display: flex;
     width:auto;
-    height:75vh;
+    height:80vh;
     justify-content: center;
     align-items: center;
     font-size: 15px;
     text-align: center;
     padding:20px;
-    gap:20px;
+    
 }
 
 
@@ -151,10 +155,10 @@ label{
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr 1fr;
     width:auto;
-    height:75vh;
+    height:auto;
     justify-content: center;
     align-items: center;
-    font-size: 15px;
+    font-size: 1.6vw;
     text-align: center;
     padding:10px;
     gap:20px;
@@ -167,11 +171,17 @@ label{
     display: flex;
     border-radius: 10px;
     align-items: center;
+    justify-content: center;
     padding:10px;
-    box-sizing: border-box;
-    line-height:1.5;
-    font-size: 1.5vw;
 
+    line-height:1.5;
+    
+
+}
+
+#CVImage{
+    width:50px;
+    height:80px;
 }
 
 #aboutMeLanguages{
@@ -179,16 +189,48 @@ label{
     
 }
 
+#aboutStart{
+    scroll-margin-top: 100px;
+}
+
+.PDFPage{
+    display:none;
+    position:fixed;
+    justify-content: center;
+    align-items:center;
+    width: 100vw; 
+    height: 100vh;
+    margin-top:0px;
+    z-index: 1;
+    background-color: black;
+    opacity:0.9;
+}
+
+#CV_PDF{
+    height:80%;
+    width:80%;
+}
+
+#exitCV{
+    display:block;
+    position:fixed;
+    top:10px;
+    right:10px;
+}
+
+#exitCV:hover{
+    cursor:pointer;
+}
 
 .project{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
     width:auto;
-    height:75vh;
+    height:auto;
     justify-content: center;
     align-items: center;
-    font-size: 1.5vw;
+    font-size: 1.6vw;
     text-align: center;
     padding:10px;
     gap:20px;
@@ -204,7 +246,10 @@ label{
     border-radius: 10px;
     padding:10px;
     line-height:1.5;
-    box-sizing: border-box;
+}
+
+#projectStart{
+    scroll-margin-top: 100px;
 }
 
 .education{
@@ -212,8 +257,8 @@ label{
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     width:auto;
-    height:75vh;
-    font-size: 1.5vw;
+    height:auto;
+    font-size: 1.6vw;
     padding:10px;
     gap:20px;
     margin-bottom:20px;
@@ -227,13 +272,16 @@ label{
     border-radius: 10px;
     padding:10px;
     line-height:1.5;
-    box-sizing: border-box;
+}
+
+#educationStart{
+    scroll-margin-top: 100px;
 }
 
 .contact{
     display: flex;
-    width:100%;
-    height:75vh;
+    width:auto;
+    height:auto;
     align-items: center;
     line-height: 0.7;
     font-size: 15px;
@@ -252,6 +300,10 @@ label{
     border-radius:10px;
     
     
+}
+
+#contactStart{
+    scroll-margin-top: 100px;
 }
 
 
@@ -325,8 +377,8 @@ a:hover{
 .h2{
     display:flex;
     justify-content:center;
+    font-size:15px;
 }
-
 
 
 @media(max-width:750px){
@@ -355,32 +407,15 @@ a:hover{
 
 @media(max-width:950px){
     .project{
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
-        width:auto;
-        height:75vh;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.5vw;
-        text-align: center;
-        padding:10px;
-        gap:20px;
     }
     
     .aboutMe{
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr;
-        width:auto;
-        height:75vh;
-        justify-content: center;
-        align-items: center;
-        font-size: 15px;
-        text-align: center;
-        padding:10px;
-        gap:20px;
     }
+    
     #aboutMeLanguages{
         grid-row: span 1;
         
@@ -388,8 +423,8 @@ a:hover{
     
 }
 
-@media(min-width:950px){
+@media(min-width:949px){
     .education{
-        font-size:14px;
+        font-size:16px;
     }
 }
