--- a/stylingDarkMode.css
+++ b/stylingDarkMode.css
@@ -27,6 +27,7 @@ a{
 
 #customA_text{
     font-size:1.6vw;
+    text-decoration: underline;
 }
 
 
@@ -148,7 +149,7 @@ label{
 .h1{
     display: flex;
     width:auto;
-    height:80vh;
+    height:90vh;
     justify-content: center;
     align-items: center;
     font-size: 15px;
@@ -380,9 +381,6 @@ a:hover{
 
 }
 
-#submitButton:hover{
-    background-color:rgb(226, 222, 222);
-}
 
 
 
