--- a/stylingLightMode.css
+++ b/stylingLightMode.css
@@ -21,14 +21,26 @@ a{
     transition: background-color 0.5s ease, color 0.5s ease;
 }
 
-.customA_h1{
-    font-size:30px;
+#customA_h1{
+    font-size: min(40px, 3.5vw);
+    color:white;
+    font-weight: bold;
+    background-color: #47C7FC;
+    border-color: #47C7FC;
+    white-space: pre;
+    border-radius: 5px;
 }
 
+
 #customA_text{
-    font-size:1.6vw;
+    font-size:1.7vw;
     text-decoration: underline;
 
+}
+
+#customA_text_about{
+    font-size: min(17px, 1.7vw);
+    text-decoration: underline;
 }
 
 
@@ -98,7 +110,7 @@ label{
 .hiddenNav{
     display: none;
     justify-content:center;
-    height: 70px;
+    height: 80px;
     width: 60px;  
     flex-grow:2;
     align-items: center;
@@ -153,12 +165,15 @@ label{
     height:90vh;
     justify-content: center;
     align-items: center;
-    font-size: 15px;
+    font-size: min(20px,1.7vw);
     text-align: center;
     padding:20px;
-    
 }
 
+#h1Text{
+    margin-bottom:100px;
+    
+}
 
 
 .aboutMe{
@@ -169,7 +184,7 @@ label{
     height:auto;
     justify-content: center;
     align-items: center;
-    font-size: 1.6vw;
+    font-size: min(17px, 1.6vw);
     text-align: center;
     padding:10px;
     gap:20px;
