--- a/stylingDarkMode.css
+++ b/stylingDarkMode.css
@@ -1,29 +1,32 @@
 *{
     font-family:monospace;
-    background-color:#1B1B1C;
-    color: white;
     transition: background-color 0.5s ease, color 0.5s ease;
     /* border: 1px solid black; */
     box-sizing: border-box;
+    color: #E9ECEF;
 } 
 
 body, html {
     margin: 0;
     padding: 0;
+    background-color: #121212;
 }
 
 a{  
     font-size: 20px;
     text-decoration: none; 
     cursor:pointer;
-    background-color:#1B1B1C;
-    color: white;
+    color: #F8F9FA;
     transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+b{
+    font-weight:bolder;
 }
 
 #customA_h1{
     font-size: min(40px, 3.5vw);
-    color:white;
+    color:#F8F9FA;
     font-weight: bold;
     background-color: #47C7FC;
     border-color: #47C7FC;
@@ -41,6 +44,7 @@ a{
 #customA_text_about{
     font-size: min(17px, 1.7vw);
     text-decoration: underline;
+    background-color: #2C2F33;
 }
 
 
@@ -57,8 +61,8 @@ label{
 
 .margin{
     padding:80px;
+    gap:0px;
     height:100%;
-    margin-bottom: 10px;
 }
 
 .nav_container{
@@ -67,6 +71,7 @@ label{
     flex-grow: 1;
     width: 100%;
     position:fixed;
+    background-color:#121212;
     top:0;
     opacity: 0.9;
 }
@@ -90,17 +95,19 @@ label{
 
 .aboutMeNav{
     display: flex;
-    justify-content:center;
+    justify-content:space-around;
+    background-color: #121212;
     height: 80px;
     width: 100%;  
     flex-grow:2;
     align-items: center;
-    gap: 20px;;
+    gap: 20px;
 }
 
 .login{
     display:flex;
     justify-content:space-around;
+    background-color: #121212;
     align-items:center;
     width: 250px;
     flex-shrink:0;
@@ -110,6 +117,7 @@ label{
 .hiddenNav{
     display: none;
     justify-content:center;
+    background-color: #121212;
     height: 80px;
     width: 60px;  
     flex-grow:2;
@@ -123,7 +131,7 @@ label{
     top: 70%; 
     display: none;
     left:0;
-    background-color:white;
+    background-color:#121212;
 }
 
 .titles{
@@ -134,13 +142,14 @@ label{
     font-size: 30px;
     height:5vh;
     border-radius: 10px;
+    background-color: #121212;
     gap:0px;
 }
 
 #contactButton{
     border: 1px solid #47C7FC;
     background-color: #47C7FC;
-    color: #FFFFFF;
+    color: #F8F9FA;
     border-radius:10px;
     padding:5px;
 }
@@ -151,7 +160,7 @@ label{
 }
 
 #standOutWords{
-    color:white;
+    color:#F8F9FA;
     font-weight: bold;
     background-color: #47C7FC;
     border-color: #47C7FC;
@@ -160,19 +169,39 @@ label{
 }
 
 .h1{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     width:auto;
+    height:auto;
     height:90vh;
-    justify-content: center;
-    align-items: center;
-    font-size: min(20px,1.7vw);
-    text-align: center;
-    padding:20px;
+    margin:0px;
+    gap:10px;
+    padding:10px;    
 }
 
-#h1Text{
-    margin-bottom:100px;
-    
+#h1Hello{
+    width:100%;
+    align-content: flex-end;
+    height:100%;
+    line-height:1.2;
+    grid-column: span 6;
+    font-size: max(55px,7vw);
+}
+
+#h1Me{
+    height:auto;
+    align-content:center;
+    grid-column: span 6;
+    font-size: max(28px, 3.5vw);
+}
+
+#h1Learn{
+    height:auto;
+    align-content:flex-start;
+    font-size: max(20px, 2.5vw);
+    grid-column: span 4;
+    grid-row:span 1;
 }
 
 
@@ -193,7 +222,8 @@ label{
 .aboutMeContent {
     width: 100%;
     height: 100%; 
-    border: 1px solid #FF8000;
+    background-color: #2C2F33;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     display: flex;
     border-radius: 10px;
     align-items: center;
@@ -228,8 +258,8 @@ label{
     height: 100vh;
     margin-top:0px;
     z-index: 1;
-    background-color: black;
-    opacity:0.9;
+    background-color: #212529;
+    opacity:0.98;
 }
 
 #CV_PDF{
@@ -266,7 +296,8 @@ label{
 .projectContent {
     width: 100%;
     height: 100%; 
-    border: 1px solid #FF8000;
+    background-color: #2C2F33;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
     display: flex;
     border-radius: 10px;
@@ -321,8 +352,9 @@ label{
     display:flex;
     flex-direction:column;
     width:80%;
-    height:100%;    
-    border: 1px solid #FF8000;
+    height:100%;
+    background-color:#2C2F33; 
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);   
     border-radius:10px;
     
     
@@ -338,7 +370,8 @@ input[type=text] {
     height: 35px;
     margin: 10px;
     font-size:15px;
-    border: 1px solid #FF8000;
+    border: 1px solid #2C2F33;
+    background-color: #121212;
     border-radius:10px;
     text-indent:10px;
 }
@@ -348,7 +381,8 @@ input[type=email]{
     height: 36px;
     margin: 10px;
     font-size:15px;
-    border: 1px solid #FF8000;
+    border: 1px solid #2C2F33;
+    background-color: #121212;
     border-radius:10px;
     text-indent:10px;
 }
@@ -361,13 +395,15 @@ input[type=email]{
 
 textarea {
     display:flex;
+    background-color: #121212;
     height:150px;
     min-height: 70px;
     margin: 10px;
     padding:10px;
     font-size:15px;
     border-radius:10px;
-    border: 1px solid #FF8000;
+    border: 1px solid #2C2F33;
+    
 }
 
 a:hover{
