--- a/stylingDarkMode.css
+++ b/stylingDarkMode.css
@@ -36,13 +36,13 @@ b{
 
 
 #customA_text{
-    font-size:1.7vw;
+    font-size: clamp(10px, 1.35vw, 22px);
     text-decoration: underline;
 
 }
 
 #customA_text_about{
-    font-size: min(17px, 1.7vw);
+    font-size: clamp(10px, 1.35vw, 18px);
     text-decoration: underline;
     background-color: #2C2F33;
 }
@@ -160,11 +160,8 @@ label{
 }
 
 #standOutWords{
-    color:#F8F9FA;
+    color:#47C7FC;
     font-weight: bold;
-    background-color: #47C7FC;
-    border-color: #47C7FC;
-    white-space: pre;
     border-radius: 5px;
 }
 
@@ -213,7 +210,7 @@ label{
     height:auto;
     justify-content: center;
     align-items: center;
-    font-size: min(17px, 1.6vw);
+    font-size: clamp(10px, 1.35vw, 18px);
     text-align: center;
     padding:10px;
     gap:20px;
@@ -280,13 +277,13 @@ label{
 
 .project{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
     width:auto;
     height:auto;
     justify-content: center;
     align-items: center;
-    font-size: 1.6vw;
+    font-size: max(10px, 1.35vw);
     text-align: center;
     padding:10px;
     gap:20px;
